clusters/games/minecraft/survive1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mc-survive1
    pod-security.kubernetes.io/enforce: privileged
    app.kubernetes.io/name: mc-survive1
  name: mc-survive1
spec:
  finalizers:
    - kubernetes
