clusters/games/minecraft/survive1/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    run: survive1
  name: survive1
  namespace: mc-survive1
spec:
  replicas: 1
  selector:
    matchLabels:
      run: survive1
  template:
    metadata:
      labels:
        run: survive1
    spec:
      containers:
        - name: server
          image: harbor.lab.brianragazzi.com/cache/itzg/minecraft-server:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - mc-health
            failureThreshold: 5
            initialDelaySeconds: 90
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 8123
              protocol: TCP
            - containerPort: 25575
              protocol: TCP
          resources:
            requests:
              memory: "13Gi"
              cpu: "500m"
            limits:
              memory: "13Gi"
              cpu: "2"
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - name: server-data
              mountPath: /data
            - name: plugins
              mountPath: /plugins
              subPath: survive1/
              readOnly: true
            - name: configfiles
              mountPath: /config
        - name: backup
          image: harbor.lab.brianragazzi.com/cache/itzg/mc-backup
          imagePullPolicy: IfNotPresent
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: server-data
              readOnly: true
            - mountPath: /backups
              name: mc-backups
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 501
        runAsGroup: 501
        runAsUser: 501
      terminationGracePeriodSeconds: 30
      volumes:
        - name: server-data
          persistentVolumeClaim:
            claimName: pvc-survive1-data
        - name: mc-backups
          nfs:
            server: 192.168.1.41
            path: /nfs/kubevol/mc-backups/survive1 # this is set to the folder containing this server's backups
            readOnly: false
        - name: configfiles
          configMap:
             name: survive1-configfiles
        - name: plugins
          nfs:
            path: /nfs/kubevol/mc-plugins
            server: 192.168.1.41
            readOnly: true
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
