clusters/games/minecraft/survive1/service-survive1.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: survive1
  name: survive1
  namespace: mc-survive1
spec:
  ports:
    - name: minecraft
      port: 25565
      protocol: TCP
      targetPort: 25565
    - name: prometheus
      port: 9940
      protocol: TCP
      targetPort: 9940
    - name: dynmap
      port: 8123
      protocol: TCP
      targetPort: 8123
    - name: bluemap
      port: 8100
      protocol: TCP
      targetPort: 8100
  selector:
    run: survive1
  type: ClusterIP
