clusters/games/minecraft/survive1/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    run: survive1
  name: survive1
  namespace: mc-survive1
spec:
  routes:
  - conditions:
    - prefix: /survive1
    pathRewritePolicy:
      replacePrefix:
      - prefix: /survive1
        replacement: /
    services:
    - name: survive1
      port: 8123
