clusters/games/minecraft/survive1/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: survive1
  namespace: mc-survive1
spec:
  podSelector:
    matchLabels:
      app: survive1
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 25565
    - protocol: TCP
      port: 8123
    - protocol: TCP
      port: 9940
    - protocol: TCP
      port: 8100
